# LocalSongs

./: .gitignore  README.md
backend/: .env.example  main.py  pyproject.toml  start.sh
backend-md/: SERVER_ORGANIZATION.md  main_api.py  run_server.py  start.sh
backend-md/app/: models.py  settings.py  utils.py
backend-md/app/api/: __init__.py
backend-md/app/api/endpoints/: download.py
backend-md/app/controllers/: downloader_controllers.py
backend/src/: main.py
backend/src/api/v1/: router.py
backend/src/api/v1/endpoints/: download.py  multi_download.py  progress.py
backend/src/core/: config.py  utils.py
backend/src/schemas/: models.py
backend/src/services/: download_service.py  playlist_service.py  spotify_service.py
frontend/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/app/api/download/: route.ts
frontend/app/api/download-playlist/: route.ts
frontend/app/api/download-with-progress/: route.ts
frontend/app/api/info/: route.ts
frontend/app/api/list-files/: route.ts
frontend/app/api/playlist-info/: route.ts
frontend/src/components/features/: multi-progress-bar.tsx  playlist-info-with-downloads.tsx  playlist-info.tsx  progress-bar.tsx
frontend/src/hooks/: use-download-progress.ts  use-download.ts  use-playlist-download.ts  use-zip-download.ts
frontend/src/services/: download-api.ts  playlist-api.ts
frontend/src/types/: api.ts
frontend_md/: pnpm-lock.yaml  start.sh
frontend_md/app/: page.tsx
frontend_md/app/api/health/: route.ts
frontend_md/hooks/: use-download.ts
frontend_md/types/: api.ts
(+3 files in other folders)
